/* (C)2023*/
package org.nectar.refined.container;

public interface Containerizeable {
	Exception defaultThrow();

	boolean isValid();
}
