/* (C)2023*/
package org.nectar.refined.exception;

import java.io.Serial;

public class EmptyCollection extends RuntimeException {
	@Serial
	private static final long serialVersionUID = 1L;
}
