@startuml
!pragma useIntermediatePackages false

annotation "NonNull" as lombok.NonNull {
}
annotation "Contract" as org.jetbrains.annotations.Contract {
  + {abstract}String value()
  + {abstract}boolean pure()
  + {abstract}String mutates()
}
annotation "NonNls" as org.jetbrains.annotations.NonNls {
}
annotation "NotNull" as org.jetbrains.annotations.NotNull {
  + {abstract}String value()
  + {abstract}Class<? extends Exception> exception()
}
annotation "Nullable" as org.jetbrains.annotations.Nullable {
  + {abstract}String value()
}
interface "Streamable" as org.toolkit4j.boxes.base.Streamable<T> {
  + {abstract}Stream<T> stream()
}
class "AnyContainer" as org.toolkit4j.boxes.container.AnyContainer<T extends Containerizeable> {
  +AnyContainer<T> filter(Predicate<T>)
  +AnyContainer<T> map(Function<? super T, U>)
  +AnyContainer<T> flatMap(Function<? super T, ? extends Container<T, ? extends U>>)
  +T orElseThrow()
  +T get()
  +boolean isValid()
  +AnyContainer<T> or(Supplier<AnyContainer<T>>)
  + {static}AnyContainer<T> of(T)
  + {static}AnyContainer<T> empty()
}
abstract class "BasicContainer" as org.toolkit4j.boxes.container.BasicContainer<T, I extends BasicContainer<T, I>> {
  +Stream<T> stream()
  +Optional<T> toOptional()
  +boolean isEmpty()
  +CompletableFuture<T> toCompletableFuture()
  +T orElseThrow(Class<ErrorException>)
  +T orElseThrow(Supplier<? extends ErrorException>)
  +T orElseThrow(ErrorException)
  +T orElse(T)
  +T orElseGet(Supplier<T>)
  +void ifPresentOrElse(Consumer<T>, Runnable)
  +T orElse(Supplier<T>)
  +void ifPresent(Consumer<T>)
  +boolean eq(Object)
  +T nonNullable()
  +boolean isValid()
  +T getValue()
}
class "CollectionContainer" as org.toolkit4j.boxes.container.CollectionContainer<E> {
  +CollectionContainer<E> filter(Predicate<Collection<E>>)
  +CollectionContainer<E> map(Function<? super Collection<E>, U>)
  +CollectionContainer<E> flatMap(Function<? super Collection<E>, ? extends Container<Collection<E>, ? extends U>>)
  +CollectionContainer<E> or(Supplier<CollectionContainer<E>>)
  + {static}CollectionContainer<E> of(Collection<E>)
  +Stream<E> elementStream()
  +Stream<E> elementParallelStream()
  + {static}CollectionContainer<E> empty()
  +Collection<E> orElseThrow()
  +Collection<E> get()
  +boolean isValid()
}
interface "Container" as org.toolkit4j.boxes.container.Container<Type, Implement extends Container<Type, Implement>> {
  + {abstract}void ifPresent(Consumer<Type>)
  + {abstract}Type orElse(Type)
  + {abstract}Type orElseGet(Supplier<Type>)
  + {abstract}void ifPresentOrElse(Consumer<Type>, Runnable)
  + {abstract}boolean isEmpty()
  + {abstract}Implement filter(Predicate<Type>)
  + {abstract}Implement map(Function<? super Type, U>)
  +Implement flatMap(Function<? super Type, ? extends Container<Type, ? extends U>>)
  + {abstract}Type orElse(Supplier<Type>)
  + {abstract}Type orElseThrow()
  + {abstract}Type get()
  + {abstract}Implement or(Supplier<Implement>)
  + {abstract}Type orElseThrow(Class<ErrorException>)
  + {abstract}Type orElseThrow(Supplier<? extends ErrorException>)
  + {abstract}Type orElseThrow(ErrorException)
  + {abstract}Optional<Type> toOptional()
  + {abstract}CompletableFuture<Type> toCompletableFuture()
  + {abstract}boolean eq(Object)
  + {abstract}Type nonNullable()
}
interface "Containerizeable" as org.toolkit4j.boxes.container.Containerizeable {
  + {abstract}Exception defaultThrow()
  + {abstract}boolean isValid()
}
class "Either" as org.toolkit4j.boxes.container.Either<L, R> {
  + {static}Either<L, R> left(L)
  + {static}Either<L, R> right(R)
  + {static}Either<L, R> of(R, Predicate<R>, L)
  + {static}Either<L, R> of(R, Predicate<R>, Function<R, L>)
  +boolean isLeft()
  +L getLeft()
  +R getRight()
  +Stream<L> leftStream()
  +Stream<R> rightStream()
}
class "NumberContainer" as org.toolkit4j.boxes.container.NumberContainer<T extends Number> {
  +NumberContainer<T> filter(Predicate<T>)
  +NumberContainer<T> map(Function<? super T, U>)
  +T orElseThrow()
  +T get()
  +NumberContainer<T> or(Supplier<NumberContainer<T>>)
}
class "StringContainer" as org.toolkit4j.boxes.container.StringContainer {
  +StringContainer filter(Predicate<CharSequence>)
  +StringContainer map(Function<? super CharSequence, U>)
  +StringContainer flatMap(Function<? super CharSequence, ? extends Container<CharSequence, ? extends U>>)
  +boolean isEmpty()
  + {static}StringContainer empty()
  +CharSequence orElseThrow()
  +CharSequence get()
  +StringContainer or(Supplier<StringContainer>)
  +StringContainer concat(String[])
  +StringContainer reverse()
  +long count(char)
  +long count(CharSequence)
  +StringContainer distinct()
  +List<String> toList()
  +StringContainer reduce(BinaryOperator<String>)
  +String[] toArray()
  + {static}StringContainer of(CharSequence)
}
interface "ThrowingConsumer" as org.toolkit4j.boxes.error.ThrowingConsumer<T, E extends Exception> {
  + {abstract}void accept(T)
}
class "Try" as org.toolkit4j.boxes.error.Try<T extends Throwable> {
  +void justThrow()
  + {static}TryBuilder builder()
  +TryBuilder toBuilder()
}
abstract class "Try$TryBuilder" as org.toolkit4j.boxes.error.Try$TryBuilder<T extends Throwable, C extends Try<T>, B extends TryBuilder<T, C, B>> {
  +B exception(T)
  + {abstract}C build()
}
class "Try$TryBuilderImpl" as org.toolkit4j.boxes.error.Try$TryBuilderImpl<T extends Throwable> {
  +Try<T> build()
}
class "TryCatch" as org.toolkit4j.boxes.error.TryCatch<E extends Exception> {
}
class "TryOr" as org.toolkit4j.boxes.error.TryOr<T, E extends Exception> {
  + {static}TryOr<T, E> attempt(Supplier<T>)
  +void ifError(Consumer<Exception>)
  +T orElse(T)
  +TryOr<U, E> map(Function<T, U>)
  +TryOr<U, E> flatMap(Function<T, TryOr<U, E>>)
  +Optional<T> resultToOptional()
  +Optional<E> exceptionToOptional()
  +E exception()
  + {static}TryOrBuilder b()
  +TryOrBuilder toBuilder()
}
abstract class "TryOr$TryOrBuilder" as org.toolkit4j.boxes.error.TryOr$TryOrBuilder<T, E extends Exception, C extends TryOr<T, E>, B extends TryOrBuilder<T, E, C, B>> {
  +B result(T)
  + {abstract}C build()
}
class "TryOr$TryOrBuilderImpl" as org.toolkit4j.boxes.error.TryOr$TryOrBuilderImpl<T, E extends Exception> {
  +TryOr<T, E> build()
}
class "EmptyCollection" as org.toolkit4j.boxes.exception.EmptyCollection {
}
class "StringEmptyOrBlank" as org.toolkit4j.boxes.exception.StringEmptyOrBlank {
}
org.toolkit4j.boxes.container.AnyContainer -u-|> org.toolkit4j.boxes.container.BasicContainer
org.toolkit4j.boxes.container.BasicContainer .u.|> org.toolkit4j.boxes.container.Container
org.toolkit4j.boxes.container.BasicContainer .u.|> org.toolkit4j.boxes.base.Streamable
org.toolkit4j.boxes.container.CollectionContainer -u-|> org.toolkit4j.boxes.container.BasicContainer
org.toolkit4j.boxes.container.Container .u.|> org.toolkit4j.boxes.base.Streamable
org.toolkit4j.boxes.container.NumberContainer -u-|> org.toolkit4j.boxes.container.BasicContainer
org.toolkit4j.boxes.container.StringContainer -u-|> org.toolkit4j.boxes.container.BasicContainer
org.toolkit4j.boxes.error.Try$TryBuilderImpl -u-|> org.toolkit4j.boxes.error.Try$TryBuilder
org.toolkit4j.boxes.error.TryOr -u-|> org.toolkit4j.boxes.error.Try
org.toolkit4j.boxes.error.TryOr$TryOrBuilder -u-|> org.toolkit4j.boxes.error.Try$TryBuilder
org.toolkit4j.boxes.error.TryOr$TryOrBuilderImpl -u-|> org.toolkit4j.boxes.error.TryOr$TryOrBuilder
@enduml
